--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ html {
 
 .project_button
 {
-	background-color: #333344;
+	background-color: #333338;
 	width: 800px;
 	height: 104px;
 }
@@ -41,14 +41,14 @@ html {
 .project_button:hover
 {
 /*background-color:#ffaa33;*/
-	background-color: #555577;
+	background-color: #555566;
 	font-weight: normal;
 }
 
 .project_button:visited
 {
 /*background-color:#ffaa33;*/
-	background-color: #555577;
+	background-color: #555566;
 	font-weight: normal;
 }
 
@@ -192,7 +192,7 @@ html {
 a:link
 {
 	border-width:	10px;
-    color:			#ffffff;
+    color:			#777777;
     font-family:		Verdana;
 	font-size:		12px;
 	font-weight:		normal;
@@ -202,7 +202,7 @@ a:link
 a:visited
 {
 	border-width:	10px;
-        color:			#ffffff;
+        color:			#777777;
         font-family:		Verdana;
 	font-size:		12px;
 	font-weight:		700;
@@ -212,7 +212,7 @@ a:visited
 a:hover
 {
 	border:			0px;
-    color:			#00ffff;
+    color:			#ffffff;
     font-family:		Verdana;
 	font-size:		12px;
 	/*font-weight:		700;*/
@@ -253,4 +253,36 @@ img
 {
 	color: #777777;
 	background-color: transparent;
+}
+
+.myphotodiv
+{
+	float: left;
+	width: 140px;
+	height: 200px;
+	/*background-color: #ff0000;*/
+}
+
+.myphoto_image
+{
+	width: 140px;
+}
+
+.mydesc
+{
+	float: right;
+	width: 620px;
+	height: 200px;
+	vertical-align:		center;
+	color:				#777777;
+	text-decoration:	none;
+	font-size:			16px;
+	text-align:			justify;
+/*	background-color: #ffff00;*/
+}
+
+.header_div
+{
+	width: 800px;
+	height: 200px;
 }
