--- a/style.css
+++ b/style.css
@@ -34,28 +34,30 @@ html {
 .project_button
 {
 	background-color: #333338;
-	width: 800px;
+	width: 812px;
 	height: 104px;
+	border-radius: 8px;
+	padding: 10px;
+	opacity: 0.7;
+	transition: background-color 200ms linear;
 }
 
 .project_button:hover
 {
-/*background-color:#ffaa33;*/
-	background-color: #555566;
-	font-weight: normal;
+	background-color: #555560;
 }
 
 .project_button:visited
 {
 /*background-color:#ffaa33;*/
-	background-color: #555566;
-	font-weight: normal;
+/*	background-color: #555566;
+	font-weight: normal;*/
 }
 
 .project_button:link
 {
 /*background-color:#ffaa33;*/
-	background-color: #555577;
+	/*background-color: #555577;*/
 	font-weight: normal;
 }
 
@@ -101,8 +103,9 @@ html {
 .project_button_screen
 {
 	float: left;
-	height:100px;
-	margin:2px;
+	height: 100px;
+	margin: 4px;
+	border-radius: 6px;
 }
 
 .center
@@ -272,7 +275,7 @@ img
 {
 	float: right;
 	width: 620px;
-	height: 200px;
+	height: 360px;
 	vertical-align:		center;
 	color:				#777777;
 	text-decoration:	none;
@@ -284,5 +287,5 @@ img
 .header_div
 {
 	width: 800px;
-	height: 200px;
+	height: 360px;
 }
